crates/reinhardt-forms/crates/macros/tests/ui/fail/unknown_property.stderr
error: form! macro is not yet implemented
  --> tests/ui/fail/unknown_property.rs:8:15
   |
8  |       let _form = form! {
   |  _______________^
9  | |         fields: {
10 | |             username: CharField {
11 | |                 unknown_property: "value",
12 | |             },
13 | |         },
14 | |     };
   |  |_____^
   |
   = note: this error originates in the macro `form` (in Nightly builds, run with -Z macro-backtrace for more info)
